--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th>Date</th>
+      <th>Description</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -12,6 +13,7 @@
     <% @meetings.each do |meeting| %>
       <tr>
         <td><%= meeting.date %></td>
+        <td><%= meeting.description %></td>
         <td><%= link_to 'Show', meeting %></td>
         <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
         <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
