--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -19,6 +19,13 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+
+  <div class="field">
+    <%= f.label :users %><br>
+    <%= f.collection_check_boxes :user_ids, User.all, :id, :name %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
