--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing meetings</h1>
 
-<table>
+<table class='table table-hover'>
   <thead>
     <tr>
       <th>Date</th>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Meeting', new_meeting_path %>
+<%= link_to 'New Meeting', new_meeting_path, class: 'btn btn-primary' %>
