Sets up initial styling.

--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -11,21 +11,39 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :date %><br>
-    <%= f.datetime_select :date %>
-  </div>
-  <div class="field">
-    <%= f.label :description %><br>
-    <%= f.text_area :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :users %><br>
-    <%= f.collection_check_boxes :user_ids, User.all, :id, :name, item_wrapper_class: 'checkbox' %>
+  <div class="row">
+    <div class="col-sm-3 col-md-5">
+      <div class="form-group">
+        <h3><%= f.label :date %></h3>
+        <%= f.datetime_select :date, class: 'form-control' %>
+      </div>
+    </div>
   </div>
 
+  <div class="row">
+    <div class="col-sm-3 col-md-5">
+      <div class="form-group">
+        <h3><%= f.label :description %></h3>
+        <%= f.text_area :description, class: 'form-control', rows: '5' %>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-3 col-md-5">
+      <div class="form-group">
+        <h3><%= f.label :users %></h3>
+        <%= f.collection_check_boxes :user_ids, User.all, :id, :name do |b| %>
+          <div class="checkbox">
+            <%= b.label { b.check_box + "  #{b.text}" } %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+  <br><br>
   <div class="actions">
-    <%= f.submit 'Submit', class: 'btn btn-primary' %>
+    <%= f.submit 'Submit', class: 'btn btn-primary btn-lg' %>
   </div>
 <% end %>
