--- a/app/views/meetings/edit.html.erb
+++ b/app/views/meetings/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @meeting %> |
-<%= link_to 'Back', meetings_path %>
+<br>
+<%= link_to 'Show', @meeting, class: 'btn btn-small btn-default' %>
+<%= link_to 'Back', meetings_path, class: 'btn btn-small btn-danger' %>
