--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing user</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @user %> |
-<%= link_to 'Back', users_path %>
+<br>
+<%= link_to 'Show', @user, class: 'btn btn-small btn-default' %>
+<%= link_to 'Back', users_path, class: 'btn btn-small btn-danger' %>
