--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -1,29 +1,35 @@
-<h1>Listing meetings</h1>
+<h1>Listing Meetings</h1>
+<br><br>
+<div class="row">
+  <div class="col-sm-4 col-md-10 col-md-offset-1">
+    <table class='table table-hover table-responsive '>
+      <thead>
+        <tr>
+          <th>Date</th>
+          <th>Description</th>
+          <th>Attendees</th>
+          <th colspan="3">Actions</th>
+        </tr>
+      </thead>
 
-<table class='table table-hover'>
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Description</th>
-      <th>Attendees</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <tbody>
+        <% @meetings.each do |meeting| %>
+          <tr>
+            <td><%= meeting.date %></td>
+            <td><%= meeting.description %></td>
+            <td><%= meeting.users.count %></td>
+            <td>
+              <%= link_to 'Show', meeting, class: 'btn btn-sm btn-info' %>
+              <%= link_to 'Edit', edit_meeting_path(meeting), class: 'btn btn-sm btn-warning' %>
+              <%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-  <tbody>
-    <% @meetings.each do |meeting| %>
-      <tr>
-        <td><%= meeting.date %></td>
-        <td><%= meeting.description %></td>
-        <td><%= meeting.users.count %></td>
-        <td><%= link_to 'Show', meeting %></td>
-        <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
-        <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Meeting', new_meeting_path, class: 'btn btn-primary' %>
+<div class="row">
+  <div class="col-sm-3">
+  <%= link_to 'New Meeting', new_meeting_path, class: 'btn btn-primary' %>
+</div>
