--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -2,4 +2,9 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', meetings_path %>
+<br>
+<div class="row">
+  <div class="col-md-3">
+    <%= link_to 'Back', meetings_path, class: 'btn btn-danger' %>
+  </div>
+</div>
