--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -11,23 +11,41 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+  <div class="row">
+    <div class="col-md-5 col-sm-4">
+      <div class="form-group">
+        <%= f.label :name %><br>
+        <%= f.text_field :name, class: 'form-control' %>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+
+  <div class="row">
+    <div class="col-md-5 col-sm-4">
+      <div class="form-group">
+        <%= f.label :email %><br>
+        <%= f.text_field :email, class: 'form-control' %>
+      </div>
+    </div>
   </div>
-  <div class="field">
-    <%= f.label :class_level %><br>
-    <%= f.select :class_level,
-    options_for_select(
-      User.class_levels.map { |status, value| [status.titleize, status] },
-      selected: @user.class_level
-    ) %>
+
+  <div class="row">
+    <div class="col-md-5 col-sm-4">
+      <div class="form-group">
+        <%= f.label :class_level %><br>
+        <%= f.select :class_level,
+        options_for_select(
+          User.class_levels.map { |status, value| [status.titleize, status] },
+          selected: @user.class_level
+        ), {}, class: 'form-control'
+         %>
+      </div>
+    </div>
   </div>
+
+  <br>
+
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Submit', class: 'btn btn-primary btn-lg' %>
   </div>
 <% end %>
