--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,40 @@
-<h1>Listing users</h1>
+<h1>Listing Users</h1>
+<br><br>
+<div class="row">
+  <div class="col-sm-4 col-md-10 col-md-offset-1">
+    <table class='table table-hover table-responsive'>
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Class level</th>
+          <th colspan="3">Actions</th>
+        </tr>
+      </thead>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Class level</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <td><%= user.name %></td>
+            <td><%= user.email %></td>
+            <td><%= user.class_level.titleize %></td>
+            <td>
+              <%= link_to 'Show', user, class: 'btn btn-sm btn-info' %>
+              <%= link_to 'Edit', edit_user_path(user), class: 'btn btn-sm btn-warning' %>
+              <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-sm btn-danger' %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
 
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= user.class_level.titleize %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+
 
 <br>
-
-<%= link_to 'New User', new_user_path %>
+<div class="row">
+  <div class="col-sm-3">
+    <%= link_to 'New User', new_user_path, class: 'btn btn-primary' %>
+  </div>
+</div>
