--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,4 +2,10 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', users_path %>
+<br>
+<div class="row">
+  <div class="col-md-3">
+    <%= link_to 'Back', users_path, class: 'btn btn-danger' %>
+  </div>
+</div>
+
